remove copy attribute from all code blocks

--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -12,11 +12,11 @@ After a user signs in or signs up, Clerk automatically redirects users back to y
 You can define the paths you want the users to be redirected to via environment variables. In this example, we redirect users to `/dashboard` after signing in, and to `/onboarding` after signing up.
 
 <CodeBlockTabs options={['Next.js', 'Remix']}>
-```sh filename=".env" copy
+```sh filename=".env"
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding
 ```
-```sh filename=".env" copy
+```sh filename=".env"
 CLERK_AFTER_SIGN_IN_URL=/dashboard
 CLERK_AFTER_SIGN_UP_URL=/onboarding
 ```
@@ -30,7 +30,7 @@ If you are using Next.js and want a more programmatically generated redirect opt
   The `afterAuth()` function will always take precedence over environment variables.
 </Callout>
 
-```tsx filename="middleware.ts" copy
+```tsx filename="middleware.ts"
 export default authMiddleware({
   afterAuth(auth, req, evt) {
     // handle users who aren't authenticated
@@ -53,7 +53,7 @@ You can explicitly define the redirect paths by passing the `afterSignInUrl` and
 ### Control components
 <CodeBlockTabs options={['ClerkProvider', 'RedirectToSignIn', 'RedirectToSignUp']}>
 
-```javascript filename="example.js" copy
+```javascript filename="example.js"
 function App() {
   return (
     <ClerkProvider publishableKey={clerkPubKey} afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding' >
@@ -67,7 +67,7 @@ function App() {
   );
 }
 ```
-```javascript filename="example.js" copy
+```javascript filename="example.js"
 function App() {
   return (
     <ClerkProvider publishableKey={clerkPubKey}>
@@ -81,7 +81,7 @@ function App() {
   );
 }
 ```
-```javascript filename="example.js" copy
+```javascript filename="example.js"
 function App() {
   return (
     <ClerkProvider publishableKey={clerkPubKey} >
@@ -106,7 +106,7 @@ function App() {
 In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton />`](/docs/components/unstyled/sign-up-button), you can also pass the props into those components. We recommend defining both `afterSignInUrl` and `afterSignUpUrl` redirects in each button as some users may choose to sign up instead after attempting to sign in.
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignInButton, SignUpButton } from "@clerk/nextjs";
 
   export default function Home() {
@@ -126,7 +126,7 @@ In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/
   }
   ```
 
-  ```jsx copy filename="example.js"
+  ```jsx filename="example.js"
   import { SignInButton, SignUpButton } from "@clerk/clerk-react";
 
   export default function Example() {
@@ -146,7 +146,7 @@ In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignInButton, SignUpButton } from "@clerk/remix";
 
   export default function Home() {
@@ -166,7 +166,7 @@ In the case that you are using a [`<SignInButton />`](/docs/components/unstyled/
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignInButton, SignUpButton } from "gatsby-plugin-clerk";
 
   export default function Home() {
