--- a/docs/advanced-usage/clerk-idp.mdx
+++ b/docs/advanced-usage/clerk-idp.mdx
@@ -28,7 +28,7 @@ Retrieve the **Callback URL** for the client application you want to configure. 
 
 Next, you need to create an OAuth Application in Clerk via the [Backend API](https://clerk.com/docs/reference/backend-api/tag/OAuth-Applications) by providing the Callback URL and a Name. Note that in this context the name is used to help you identify your application and is not displayed anywhere publicly.
 
-```sh copy filename="POST /v1/oauth_applications"
+```sh filename="POST /v1/oauth_applications"
 curl
  -X POST https://api.clerk.com/v1/oauth_applications \
  -H "Authorization: Bearer <CLERK_SECRET_KEY>"  \
@@ -45,7 +45,7 @@ To create an OAuth Application that uses the authorization code flow with proof 
 Clerk creates an OAuth application and returns it's configurations back to you.
 
 
-```json copy filename="RESPONSE"
+```json filename="RESPONSE"
 {
     "object":"oauth_application",
     "id":"oa_2O4BCh3zUONvWlZHtBXv6s6tm7u",
