--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -50,7 +50,7 @@ alt="Clerk Dashboard inside the satellites tab of the domain"
 Now that you have created the satellite application, it's time to configure it as such. You can do so with the environment variables below or via properties (see the next step).
 
 <CodeBlockTabs options={["Next.js", "Remix"]}>
-```env copy filename=".env.local"
+```env filename=".env.local"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_SECRET_KEY={{secret}}
 
@@ -59,7 +59,7 @@ NEXT_PUBLIC_CLERK_IS_SATELLITE=true
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=https://primary.dev/sign-in
 ```
-```env filename=".env" copy
+```env filename=".env"
 CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_SECRET_KEY={{secret}}
 
@@ -87,7 +87,7 @@ The `URL` mentioned above is the request url for server side usage or the curren
     You can embed the `<SignIn />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
 
     <CodeBlockTabs options={["<ClerkProvider />", "Middleware"]}>
-    ```jsx copy filename="_app.tsx"
+    ```jsx filename="_app.tsx"
     import { ClerkProvider } from "@clerk/nextjs";
     import Head from "next/head";
 
@@ -104,7 +104,7 @@ The `URL` mentioned above is the request url for server side usage or the curren
     }
     ```
 
-    ```js copy filename="middleware.ts"
+    ```js filename="middleware.ts"
     import { authMiddleware, redirectToSignIn } from "@clerk/nextjs/server";
 
     export default authMiddleware({
@@ -127,7 +127,7 @@ The `URL` mentioned above is the request url for server side usage or the curren
   </Tab>
 
   <Tab>
-    ```js copy filename="root.tsx"
+    ```js filename="root.tsx"
     export const loader = (args) => {
       return rootAuthLoader(
         args,
