--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -55,7 +55,7 @@ Now that you have added the custom claims to your session token, you can use the
 
 #### Using `getAuth` in your Next.js application
 
-```tsx copy fileName=pages/api/example.ts
+```tsx fileName=pages/api/example.ts
 import { getAuth } from "@clerk/nextjs/server";
 
 export default async function handler(req, res) {
