--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -25,7 +25,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
     <Callout>The example below shows the Sign In page mounted on the url /sign-in. For more information on how to implement this, check out the [`<SignIn />` UI page](/docs/components/authentication/sign-in).</Callout>
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="/app/sign-up/[[...sign-up]]/page.[jsx/tsx]"
+      ```jsx filename="/app/sign-up/[[...sign-up]]/page.[jsx/tsx]"
       import { SignUp } from "@clerk/nextjs";
 
       export default function Page() {
@@ -33,7 +33,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
       }
       ```
 
-      ```jsx copy filename="/pages/sign-up/[[...index]].[jsx/tsx]"
+      ```jsx filename="/pages/sign-up/[[...index]].[jsx/tsx]"
       import { SignUp } from "@clerk/nextjs";
 
       const SignUpPage = () => (
@@ -45,7 +45,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```jsx copy filename="sign-up.jsx"
+    ```jsx filename="sign-up.jsx"
     import { SignUp } from "@clerk/clerk-react";
 
     function SignUpPage() {
@@ -55,7 +55,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
     </Tab>
 
     <Tab>
-    ```jsx copy filename="app/routes/sign-up/$.tsx"
+    ```jsx filename="app/routes/sign-up/$.tsx"
     import { SignUp } from "@clerk/remix";
 
     export default function SignUpPage() {
@@ -70,7 +70,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/pages/sign-up.js"
+    ```jsx filename="/pages/sign-up.js"
     import { SignUp } from "gatsby-plugin-clerk";
 
     export default function SignUpPage() {
@@ -85,7 +85,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```js copy filename="sign-up.js"
+    ```js filename="sign-up.js"
     window.Clerk.mountSignUp(
       document.getElementById("sign-up")
     );
