--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -18,7 +18,7 @@ The `<ClerkProvider />` component must be added to your React entrypoint.
 <Tabs items={['Next.js', 'React']}>
 <Tab>
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
-```tsx copy filename="app/layout.tsx"
+```tsx filename="app/layout.tsx"
 import React from "react";
 import { ClerkProvider } from "@clerk/nextjs";
 
@@ -39,7 +39,7 @@ export default function RootLayout({
   );
 }
 ```
-```tsx filename="_app.tsx" copy
+```tsx filename="_app.tsx"
 import { ClerkProvider } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
@@ -56,7 +56,7 @@ export default MyApp;
 </CodeBlockTabs>
 </Tab>
 <Tab>
-```tsx filename="index.tsx" copy
+```tsx filename="index.tsx"
 import React from "react";
 import ReactDOM from "react-dom";
 import { ClerkProvider } from "@clerk/clerk-react";
