--- a/docs/components/control/clerk-loaded.mdx
+++ b/docs/components/control/clerk-loaded.mdx
@@ -14,7 +14,7 @@ The `<ClerkLoaded />` component guarantees that the Clerk object has loaded and 
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
 <Tab>
-```tsx copy filename="pages/_app.tsx"
+```tsx filename="pages/_app.tsx"
 import "@/styles/globals.css";
 import { ClerkLoaded, ClerkProvider } from "@clerk/nextjs";
 import { AppProps } from "next/app";
@@ -35,7 +35,7 @@ export default MyApp;
 
 Once you have wrapped your app with `<ClerkLoaded />`, you can access the `Clerk` object without the need to check if it exists.
 
-```tsx copy filename="pages/index.tsx"
+```tsx filename="pages/index.tsx"
 declare global {
   interface Window {
     Clerk: any;
@@ -49,7 +49,7 @@ export default function Home() {
 
 </Tab>
 <Tab>
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import { useEffect } from "react";
 import { ClerkLoaded, ClerkProvider } from "@clerk/clerk-react";
 
@@ -85,7 +85,7 @@ export default App;
 ```
 </Tab>
 <Tab>
-```tsx filename="routes/index.tsx" copy
+```tsx filename="routes/index.tsx"
 import { ClerkLoaded } from "@clerk/remix";
 
 export default function Index() {
