--- a/docs/components/control/clerk-loading.mdx
+++ b/docs/components/control/clerk-loading.mdx
@@ -14,7 +14,7 @@ The `<ClerkLoading />` renders its children while Clerk is loading, and is helpf
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
 <Tab>
-```tsx copy filename="pages/_app.tsx"
+```tsx filename="pages/_app.tsx"
 import "@/styles/globals.css";
 import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/nextjs";
 import { AppProps } from "next/app";
@@ -38,7 +38,7 @@ export default MyApp;
 </Tab>
 <Tab>
 
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import { ClerkLoaded, ClerkLoading, ClerkProvider } from '@clerk/clerk-react';
 
 function App() {
@@ -64,7 +64,7 @@ export default App;
 
 </Tab>
 <Tab>
-```tsx filename="routes/index.tsx" copy
+```tsx filename="routes/index.tsx"
 import { ClerkLoading } from "@clerk/remix";
 
 export default function Index() {
