--- a/docs/components/control/multi-session.mdx
+++ b/docs/components/control/multi-session.mdx
@@ -14,7 +14,7 @@ The `<MultisessionAppSupport />` provides a wrapper for your React application t
 
 <Tabs items={['Next.js', 'React']}>
 <Tab>
-```tsx copy filename="pages/_app.tsx"
+```tsx filename="pages/_app.tsx"
 import "@/styles/globals.css";
 import { MultisessionAppSupport,ClerkProvider } from "@clerk/nextjs";
 import { AppProps } from "next/app";
@@ -33,7 +33,7 @@ export default MyApp;
 ```
 </Tab>
 <Tab>
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import { ClerkProvider, MultisessionAppSupport } from "@clerk/clerk-react";
 
 function App() {
