--- a/docs/components/control/signed-out.mdx
+++ b/docs/components/control/signed-out.mdx
@@ -13,7 +13,7 @@ The `<SignedOut />` component offers authentication checks as a cross-cutting co
 ## Usage
 <Tabs items={['Next.js', 'React', 'Remix']}>
 <Tab>
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import "@/styles/globals.css";
 import {
   ClerkProvider,
@@ -37,7 +37,7 @@ export default MyApp;
 ```
 </Tab>
 <Tab>
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import { SignedOut, ClerkProvider } from "@clerk/clerk-react";
 
 function Page() {
@@ -62,7 +62,7 @@ function Page() {
 
 Below is an example of how to use `<SignedOut />` with React Router. The `<SignedOut />` component can be used as a child of a `<Route />` component to render content only to signed in users.
 
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import { Routes, Route } from 'react-router-dom';
 import {
   ClerkProvider,
@@ -93,7 +93,7 @@ function App() {
 ```
 </Tab>
 <Tab>
-```tsx filename="routes/index.tsx" copy
+```tsx filename="routes/index.tsx"
 import {
   SignedIn,
   SignedOut,
