--- a/docs/components/customization/layout.mdx
+++ b/docs/components/customization/layout.mdx
@@ -13,7 +13,7 @@ The layout key can be used to change the layout of the [`<SignIn/>`](/docs/compo
 
 ## Usage
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import { ClerkProvider } from '@clerk/nextjs';
 
 <ClerkProvider
