--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -40,20 +40,20 @@ The `@clerk/localizations` package contains predefined localizations for the Cle
 ### Usage
 
 <CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install @clerk/localizations
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add @clerk/localizations
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add @clerk/localizations
   ```
 </CodeBlockTabs>
 
-```tsx filename="_app.tsx" copy
+```tsx filename="_app.tsx"
 import { ClerkProvider } from "@clerk/nextjs";
 import { frFR } from "@clerk/localizations";
 import type { AppProps } from "next/app";
@@ -75,7 +75,7 @@ You can also provide your own localizations for the Clerk Components. This is us
 
 ### Usage
 
-```tsx filename="_app.tsx" copy
+```tsx filename="_app.tsx"
 import { ClerkProvider } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
