--- a/docs/components/customization/overview.mdx
+++ b/docs/components/customization/overview.mdx
@@ -19,15 +19,15 @@ This applies to all of the React-based packages, like [Next.js](/docs/quickstart
 Clerk offers [a set of themes that can be used with the `appearance` prop](/docs/components/customization/themes). The themes are available as a package called `@clerk/themes`.
 
 <CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install @clerk/themes
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add @clerk/themes
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add @clerk/themes
   ```
 </CodeBlockTabs>
@@ -35,7 +35,7 @@ Clerk offers [a set of themes that can be used with the `appearance` prop](/docs
 #### Usage
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix']}>
-  ```tsx filename="app.tsx" copy
+  ```tsx filename="app.tsx"
   import { dark } from '@clerk/themes';
   import { ClerkProvider, SignIn } from '@clerk/nextjs';
   import type { AppProps } from "next/app";
@@ -55,7 +55,7 @@ Clerk offers [a set of themes that can be used with the `appearance` prop](/docs
   export default MyApp;
   ```
 
-  ```tsx filename="app.tsx" copy
+  ```tsx filename="app.tsx"
   import React from "react";
   import "./App.css";
   import { dark } from '@clerk/themes';
@@ -167,7 +167,7 @@ Using this knowledge about the publicly available classes, you can target the el
 
 Here's an example of how you can target the primary button in a Clerk component:
 
-```css filename="styles/global.css" copy
+```css filename="styles/global.css"
 .cl-formButtonPrimary {
   font-size: 14px;
   text-transform: none;
@@ -195,7 +195,7 @@ cl-formButtonPrimary cl-button 🔒️ cl-internal-1ta0xpz
 
 Remove the `cl-` prefix and use it as the key for a new object in the `elements` property. The value of this object should be the string of classes you want to apply to the element.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import { ClerkProvider, SignIn } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
@@ -220,7 +220,7 @@ export default MyApp;
 
 By using the method outlined above, you can use Tailwind classes to style Clerk components.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import { ClerkProvider, SignIn } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
@@ -250,7 +250,7 @@ CSS modules are a great way to scope your CSS to a specific component. Clerk com
 
 Simply create your Module file and add the CSS you want to apply.
 
-```css filename="styles/SignIn.module.css" copy
+```css filename="styles/SignIn.module.css"
 .primaryColor {
   background-color: bisque;
   color: black;
@@ -259,7 +259,7 @@ Simply create your Module file and add the CSS you want to apply.
 
 Then you can apply this by importing the file and using the classes whenever required:
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import styles from "../styles/SignIn.module.css";
 import { ClerkProvider, SignIn } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
@@ -285,7 +285,7 @@ export default MyApp;
 
 Using the same method for identifying elements as mentioned previously, you can pass an object of CSS properties to the `elements` property on `appearance` in your `ClerkProvider`.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import { ClerkProvider, SignIn } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
