--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -19,7 +19,7 @@ The `<OrganizationSwitcher />` component is used to enable the ability to switch
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="/app/organization-switcher/[[...organization-switcher]]/page.[jsx/tsx]"
+      ```jsx filename="/app/organization-switcher/[[...organization-switcher]]/page.[jsx/tsx]"
       import { OrganizationSwitcher } from "@clerk/nextjs";
 
       export default function OrganizationSwitcherPage() {
@@ -31,7 +31,7 @@ The `<OrganizationSwitcher />` component is used to enable the ability to switch
       }
       ```
 
-      ```jsx copy filename="/pages/organization-switcher/[[...index]].[jsx/tsx]"
+      ```jsx filename="/pages/organization-switcher/[[...index]].[jsx/tsx]"
       import { OrganizationSwitcher } from "@clerk/nextjs";
 
       export default function OrganizationSwitcherPage() {
@@ -46,7 +46,7 @@ The `<OrganizationSwitcher />` component is used to enable the ability to switch
   </Tab>
 
   <Tab>
-    ```jsx copy filename="organization-switcher.tsx"
+    ```jsx filename="organization-switcher.tsx"
     import { OrganizationSwitcher } from "@clerk/clerk-react";
 
     export default function OrganizationSwitcherPage() {
@@ -60,7 +60,7 @@ The `<OrganizationSwitcher />` component is used to enable the ability to switch
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/pages/organization-switcher/$.tsx"
+    ```jsx filename="/pages/organization-switcher/$.tsx"
     import { OrganizationSwitcher } from "@clerk/remix";
 
     export default function OrganizationSwitcherPage() {
