--- a/docs/components/unstyled/sign-in-with-metamask.mdx
+++ b/docs/components/unstyled/sign-in-with-metamask.mdx
@@ -16,7 +16,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
 #### Basic usage
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignInWithMetamaskButton } from "@clerk/nextjs";
 
   export default function Home() {
@@ -29,7 +29,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
   }
   ```
 
-  ```jsx copy filename="example.js"
+  ```jsx filename="example.js"
   import { SignInWithMetamaskButton } from "@clerk/clerk-react";
 
   export default function Example() {
@@ -42,7 +42,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignInWithMetamaskButton } from "@clerk/remix";
 
   export default function Home() {
@@ -55,7 +55,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignInWithMetamaskButton } from "gatsby-plugin-clerk";
 
   export default function Home() {
@@ -74,7 +74,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
 In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignInWithMetamaskButton } from "@clerk/nextjs";
 
   export default function Home() {
@@ -91,7 +91,7 @@ In some cases you will want to use your own button, or button text. You can do t
   }
   ```
 
-  ```jsx copy filename="example.js"
+  ```jsx filename="example.js"
   import { SignInWithMetamaskButton } from "@clerk/clerk-react";
 
   export default function Example() {
@@ -108,7 +108,7 @@ In some cases you will want to use your own button, or button text. You can do t
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignInWithMetamaskButton } from "@clerk/remix";
 
   export default function Home() {
@@ -125,7 +125,7 @@ In some cases you will want to use your own button, or button text. You can do t
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignInWithMetamaskButton } from "gatsby-plugin-clerk";
 
   export default function Home() {
