--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -14,7 +14,7 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
   <Tab>
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="app/page.js"
+      ```jsx filename="app/page.js"
       import { SignOutButton } from "@clerk/nextjs";
 
       export default function Home() {
@@ -27,7 +27,7 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
       }
       ```
 
-      ```jsx copy filename="pages/index.js"
+      ```jsx filename="pages/index.js"
       import { SignOutButton } from "@clerk/nextjs";
 
       export default function Home() {
@@ -43,7 +43,7 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
   </Tab>
 
   <Tab>
-    ```jsx copy filename="example.js"
+    ```jsx filename="example.js"
     import { SignOutButton } from "@clerk/clerk-react";
 
     export default function Example() {
@@ -58,7 +58,7 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
   </Tab>
 
   <Tab>
-    ```jsx copy filename="pages/index.js"
+    ```jsx filename="pages/index.js"
     import { SignOutButton } from "@clerk/remix";
 
     export default function Home() {
@@ -73,7 +73,7 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
   </Tab>
 
   <Tab>
-    ```jsx copy filename="pages/index.js"
+    ```jsx filename="pages/index.js"
     import { SignOutButton } from "gatsby-plugin-clerk";
 
     export default function Home() {
@@ -95,7 +95,7 @@ You can create a custom button by wrapping your own button, or button text, in t
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
   <Tab>
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="app/page.js"
+      ```jsx filename="app/page.js"
       import { SignOutButton } from "@clerk/nextjs";
 
       export default function Home() {
@@ -110,7 +110,7 @@ You can create a custom button by wrapping your own button, or button text, in t
       }
       ```
 
-      ```jsx copy filename="pages/index.js"
+      ```jsx filename="pages/index.js"
       import { SignOutButton } from "@clerk/nextjs";
 
       export default function Home() {
@@ -128,7 +128,7 @@ You can create a custom button by wrapping your own button, or button text, in t
   </Tab>
 
   <Tab>
-    ```jsx copy filename="example.js"
+    ```jsx filename="example.js"
     import { SignOutButton } from "@clerk/clerk-react";
 
     export default function Example() {
@@ -145,7 +145,7 @@ You can create a custom button by wrapping your own button, or button text, in t
   </Tab>
 
   <Tab>
-    ```jsx copy filename="pages/index.js"
+    ```jsx filename="pages/index.js"
     import { SignOutButton } from "@clerk/remix";
 
     export default function Home() {
@@ -162,7 +162,7 @@ You can create a custom button by wrapping your own button, or button text, in t
   </Tab>
 
   <Tab>
-    ```jsx copy filename="pages/index.js"
+    ```jsx filename="pages/index.js"
     import { SignOutButton } from "gatsby-plugin-clerk";
 
     export default function Home() {
