--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -12,7 +12,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
 #### Basic usage
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignUpButton } from "@clerk/nextjs";
 
   export default function Home() {
@@ -25,7 +25,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
   }
   ```
 
-  ```jsx copy filename="example.js"
+  ```jsx filename="example.js"
   import { SignUpButton } from "@clerk/clerk-react";
 
   export default function Example() {
@@ -38,7 +38,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignUpButton } from "@clerk/remix";
 
   export default function Home() {
@@ -51,7 +51,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignUpButton } from "gatsby-plugin-clerk";
 
   export default function Home() {
@@ -70,7 +70,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
 In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
 
 <CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignUpButton } from "@clerk/nextjs";
 
   export default function Home() {
@@ -87,7 +87,7 @@ In some cases you will want to use your own button, or button text. You can do t
   }
   ```
 
-  ```jsx copy filename="example.js"
+  ```jsx filename="example.js"
   import { SignUpButton } from "@clerk/clerk-react";
 
   export default function Example() {
@@ -104,7 +104,7 @@ In some cases you will want to use your own button, or button text. You can do t
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignUpButton } from "@clerk/remix";
 
   export default function Home() {
@@ -121,7 +121,7 @@ In some cases you will want to use your own button, or button text. You can do t
   }
   ```
 
-  ```jsx copy filename="pages/index.js"
+  ```jsx filename="pages/index.js"
   import { SignUpButton } from "gatsby-plugin-clerk";
 
   export default function Home() {
