--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -22,7 +22,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="userButtonExample.[jsx/tsx]"
+      ```jsx filename="userButtonExample.[jsx/tsx]"
       import {
         ClerkProvider,
         SignedIn,
@@ -58,7 +58,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
       export default MyApp;
       ```
 
-      ```jsx copy filename="userButtonExample.[jsx/tsx]"
+      ```jsx filename="userButtonExample.[jsx/tsx]"
       import {
         ClerkProvider,
         SignedIn,
@@ -97,7 +97,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
   </Tab>
 
   <Tab>
-    ```tsx filename="app.tsx" copy
+    ```tsx filename="app.tsx"
     import {
       ClerkProvider,
       SignedIn,
@@ -168,7 +168,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
   </Tab>
 
   <Tab>
-    ```tsx filename="router/index.tsx" copy
+    ```tsx filename="router/index.tsx"
     import {
       UserButton,
     } from "@clerk/remix";
