--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -22,7 +22,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
     You can embed the `<UserProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="/app/user-profile/[[...user-profile]]/page.tsx"
+      ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
       import { UserProfile } from "@clerk/nextjs";
 
       const UserProfilePage = () => (
@@ -32,7 +32,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
       export default UserProfilePage;
       ```
 
-      ```jsx copy filename="/pages/user-profile/[[...index]].tsx"
+      ```jsx filename="/pages/user-profile/[[...index]].tsx"
       import { UserProfile } from "@clerk/nextjs";
 
       const UserProfilePage = () => (
@@ -45,7 +45,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/user-profile.tsx"
+    ```jsx filename="/user-profile.tsx"
     import { UserProfile } from "@clerk/clerk-react";
 
     const UserProfilePage = () => (
@@ -57,7 +57,7 @@ The `<UserProfile />` component is used to render a beautiful, full-featured acc
   </Tab>
 
   <Tab>
-    ```tsx filename="routes/user/$.tsx" copy
+    ```tsx filename="routes/user/$.tsx"
     import { UserProfile } from "@clerk/remix";
 
     export default function UserProfilePage() {
