--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -37,7 +37,7 @@ A successful sign-up consists of the following steps:
 
 <Tab>
 <CodeBlockTabs options={['Pages Router', 'App Router']}>
-```tsx copy filename="pages/sign-up/[[...index]].tsx"
+```tsx filename="pages/sign-up/[[...index]].tsx"
 import { useState } from "react";
 import { useSignUp } from "@clerk/nextjs";
 import { useRouter } from "next/router";
@@ -130,7 +130,7 @@ export default function SignUpForm() {
   );
 }
 ```
-```tsx copy filename="app/sign-up/[[...sign-up]].page.tsx"
+```tsx filename="app/sign-up/[[...sign-up]].page.tsx"
 "use client"
 import { useState } from "react";
 import { useSignUp } from "@clerk/nextjs";
@@ -228,7 +228,7 @@ export default function SignUpForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="signup.tsx"
+```tsx filename="signup.tsx"
 import { useState } from "react";
 import { useSignUp } from "@clerk/clerk-react";
 
@@ -321,7 +321,7 @@ export default function SignUpForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="app/routes/sign-up/$.tsx"
+```tsx filename="app/routes/sign-up/$.tsx"
 import { useState } from "react";
 import { useSignUp } from "@clerk/remix";
 
@@ -415,7 +415,7 @@ export default function SignUpForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="sign-up.tsx"
+```tsx filename="sign-up.tsx"
 import { useState } from "react";
 // Use the react package when using Gatsby
 import { useSignUp } from "@clerk/react";
@@ -512,7 +512,7 @@ export default function SignUpForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="SignUpScreen.tsx"
+```tsx filename="SignUpScreen.tsx"
 import * as React from "react";
 import { Text, TextInput, TouchableOpacity, View } from "react-native";
 import { useSignUp } from "@clerk/clerk-expo";
@@ -613,7 +613,7 @@ export default function SignUpScreen() {
 </Tab>
 
 <Tab>
-```html copy filename="your-app.html"
+```html filename="your-app.html"
 <!DOCTYPE html>
 <html lang="en">
 
@@ -693,7 +693,7 @@ In email/password authentication, the sign-in is a process that requires users t
 
 <Tab>
 <CodeBlockTabs options={['Pages Router', 'App Router']}>
-```tsx copy filename="pages/sign-in/[[...index]].tsx"
+```tsx filename="pages/sign-in/[[...index]].tsx"
 import { useState } from "react";
 import { useSignIn } from "@clerk/nextjs";
 import { useRouter } from "next/router";
@@ -748,7 +748,7 @@ export default function SignInForm() {
   );
 }
 ```
-```tsx copy filename="app/sign-in/[[...sign-in]].page.tsx"
+```tsx filename="app/sign-in/[[...sign-in]].page.tsx"
 "use client"
 import { useState } from "react";
 import { useSignIn } from "@clerk/nextjs";
@@ -808,7 +808,7 @@ export default function SignInForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="signin.tsx"
+```tsx filename="signin.tsx"
 import { useState } from "react";
 import { useSignIn } from "@clerk/clerk-react";
 
@@ -863,7 +863,7 @@ export default function SignInForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="app/routes/sign-in/$.tsx"
+```tsx filename="app/routes/sign-in/$.tsx"
 import { useState } from "react";
 import { useSignIn } from "@clerk/remix";
 
@@ -918,7 +918,7 @@ export default function SignInForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="sign-in.tsx"
+```tsx filename="sign-in.tsx"
 import { useState } from "react";
 // Use React for Gatsby
 import { useSignIn } from "@clerk/clerk-react";
@@ -974,7 +974,7 @@ export default function SignInForm() {
 </Tab>
 
 <Tab>
-```tsx copy filename="SignUpScreen.tsx"
+```tsx filename="SignUpScreen.tsx"
 import React from "react";
 import { Text, TextInput, TouchableOpacity, View } from "react-native";
 import { useSignIn } from "@clerk/clerk-expo";
@@ -1038,7 +1038,7 @@ export default function SignInScreen() {
 </Tab>
 
 <Tab>
-```html copy filename="your-app.html"
+```html filename="your-app.html"
 <!DOCTYPE html>
 <html lang="en">
 
