--- a/docs/deployments/migrate-from-firebase.mdx
+++ b/docs/deployments/migrate-from-firebase.mdx
@@ -23,7 +23,7 @@ Migrating your user base from Firebase to Clerk is a 2-part process that can be 
 
 If you haven't already, install the Firebase CLI:
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 npm install -g firebase-tools
 ```
 
@@ -31,7 +31,7 @@ npm install -g firebase-tools
 
 Login into your Firebase account via the CLI.
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 firebase login
 ```
 
@@ -39,7 +39,7 @@ firebase login
 
 Use the firebase CLI to list your projects and find the project ID you want to export.
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 firebase projects:list
 ```
 
@@ -47,7 +47,7 @@ firebase projects:list
 
 Use the firebase CLI to export your users to a JSON file.
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 firebase auth:export firebase-users.json --format=json --project <YOUR_PROJECT_ID>
 ```
 
@@ -77,18 +77,18 @@ Now you have all the information you need to import your Firebase users into Cle
 
 #### init npm
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 npm init -y
 ```
 
 #### Install dependencies
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 node-fetch@2
 ```
 
 #### Create a script
-```js filename="terminal/migrate-to-clerk.js" copy
+```js filename="terminal/migrate-to-clerk.js"
 const fetch = require('node-fetch')
 const firebaseUsers = require('./firebase-users.json')
 
@@ -145,7 +145,7 @@ Here, body will either hold the necessary information to migrate a password-base
 
 ### Run the script
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 node migrate-to-clerk.js
 ```
 
