--- a/docs/deployments/overview.mdx
+++ b/docs/deployments/overview.mdx
@@ -75,7 +75,7 @@ Clerk uses a DNS check to validate this CNAME record. If this subdomain is rever
 
 If you accidently set the wrong domain, you can change it by using our backend API. You can find the Secret key in the settings page of your production instance. You can then use the following curl command to change the domain:
 
-```bash copy
+```bash
 curl -XPOST -H 'Authorization: CLERK-SECRET-KEY' -H "Content-type: application/json" -d '{
 "home_url": "https://www.example.com"
 }' 'https://api.clerk.com/v1/instance/change_domain'
