--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -18,7 +18,7 @@ Methods for [changing a member's role](/docs/references/backend/organization/upd
 {/* TODO (DOCS-316): Update and validate these examples. */}
 
 <CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
-```tsx filename="pages/organizations/[id].ts" copy
+```tsx filename="pages/organizations/[id].ts"
 import { useState, useEffect } from "react";
 import { useOrganization } from "@clerk/nextjs";
 import type { OrganizationMembershipResource } from "@clerk/types";
