--- a/docs/organizations/viewing-memberships.mdx
+++ b/docs/organizations/viewing-memberships.mdx
@@ -20,7 +20,7 @@ You can use the `getOrganizationMembershipList()` method to retrieve a list of m
 {/* TODO (DOCS-316): Update and validate these code examples. */}
 
 <CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
-```tsx filename="pages/joined-organizations.tsx" copy
+```tsx filename="pages/joined-organizations.tsx"
 import { useOrganizationList } from "@clerk/nextjs";
 import React from "react";
  
@@ -63,7 +63,7 @@ const JoinedOrganizationList = () => {
 export default JoinedOrganizationList;
 ```
 
-```tsx filename="joined-organizations.tsx" copy
+```tsx filename="joined-organizations.tsx"
 import { useOrganizationList } from "@clerk/nextjs";
 import React from "react";
  
@@ -106,7 +106,7 @@ const JoinedOrganizationList = () => {
 export default JoinedOrganizationList;
 ```
 
-```js filename="joined-organizations.js" copy
+```js filename="joined-organizations.js"
 <ul id="organizations_list"></ul>
 
 <script>
