--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -25,15 +25,15 @@ If you're looking for a more complete example, check out our [Fastify example ap
 ### Install `@clerk/fastify`
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install @clerk/fastify
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add @clerk/fastify
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add @clerk/fastify
   ```
 </CodeBlockTabs>
@@ -45,7 +45,7 @@ Below is an example of an `.env` file. If you are signed into your Clerk Dashboa
 
 <InjectKeys>
 
-```sh copy filename=".env"
+```sh filename=".env"
 CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_SECRET_KEY={{secret}}
 ```
@@ -55,18 +55,18 @@ CLERK_SECRET_KEY={{secret}}
 This examples uses `dontenv` to load the environment variables. You can use any other library or method, if you so wish.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install @dotenv
   npm install -D types/dotenv
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add @clerk/fastify
   yarn add -D types/dotenv
   ```
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add @clerk/fastify
   pnpm add -D types/dotenv
   ```
@@ -76,7 +76,7 @@ This examples uses `dontenv` to load the environment variables. You can use any 
 
 The Clerk plugin can be registered globally or for specific routes. This examples registers the plugin globally.
 
-```ts filename="index.ts" copy
+```ts filename="index.ts"
 import * as dotenv from "dotenv";
 
 dotenv.config();
@@ -104,7 +104,7 @@ start();
 
 The `getAuth` helper can be used to access the auth state of the current request.
 
-```ts filename="index.ts" copy
+```ts filename="index.ts"
 import * as dotenv from "dotenv";
 
 dotenv.config();
@@ -143,7 +143,7 @@ start();
 
 To protect a route using Clerk, you can use `getAuth` to check if the user is authenticated. If the user is not authenticated, you can return a 403 error.
 
-```ts filename="index.ts" copy
+```ts filename="index.ts"
 fastify.get("/protected", async (request, reply) => {
   const { userId } = getAuth(request);
   if (!userId) {
@@ -161,7 +161,7 @@ fastify.get("/protected", async (request, reply) => {
 If you want to use Clerk for specific routes only, you can register the plugin for specific routes. In this example, the routes are split into two groups: one for public routes and one for private routes.
 
 
-```ts filename="index.ts" copy
+```ts filename="index.ts"
 import * as dotenv from "dotenv";
 
 dotenv.config();
