--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -28,15 +28,15 @@ To use the ClerkJS package, you have two options:
 At the root of your project, install the ClerkJS package using your package manager of choice:
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install @clerk/clerk-js
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add @clerk/clerk-js
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add @clerk/clerk-js
   ```
 </CodeBlockTabs>
@@ -65,7 +65,7 @@ To use the ClerkJS package, you'll need an [API Key and frontend API URL from th
 
 <InjectKeys>
 
-```sh copy filename=".env.local"
+```sh filename=".env.local"
 REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
 ```
@@ -79,7 +79,7 @@ CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
 To use the ClerkJS package, you'll need to initialize the Clerk class with your frontend API URL and publishable key.
 
 <CodeBlockTabs options={['npm Package', 'script Tag']}>
-```js copy filename="index.js"
+```js filename="index.js"
 import Clerk from '@clerk/clerk-js';
 
 const clerkFrontendApi = `pk_{{pub_key}}`;
@@ -89,7 +89,7 @@ await clerk.load({
 });
 ```
 
-```html copy filename="index.html"
+```html filename="index.html"
 <script>
   const clerkFrontendApi = `pk_{{pub_key}}`;
   const frontendApi = '[your-domain].clerk.accounts.dev';
