--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -21,15 +21,15 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install @clerk/clerk-react
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add @clerk/clerk-react
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add @clerk/clerk-react
   ```
 </CodeBlockTabs>
@@ -40,7 +40,7 @@ Below is an example of an .env file. If you are signed into your Clerk Dashboard
 
 <InjectKeys>
 
-```sh copy filename=".env"
+```sh filename=".env"
 REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
 ```
 
@@ -50,7 +50,7 @@ REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
 
 Clerk requires your React application to be wrapped in the [`<ClerkProvider />`](/docs/components/clerk-provider) component. The `<ClerkProvider />` component provides active session and user context to Clerk's hooks and other components.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import React from "react";
 import "./App.css";
 import { ClerkProvider } from "@clerk/clerk-react";
@@ -75,7 +75,7 @@ export default App;
 
 Clerk offers [Control Components](/docs/components/overview) that allow you to protect your pages. These components are used to control the visibility of your pages based on the user's authentication state.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import React from "react";
 import "./App.css";
 import {
@@ -123,7 +123,7 @@ Start your React application via `npm run start`, visit `http://localhost:3000`,
 
 Clerk can work with any routing library. Below is an example of how to use Clerk with React Router and how to embed the Clerk components in your application.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import {
   ClerkProvider,
   SignedIn,
@@ -214,7 +214,7 @@ Clerk provides a set of [hooks and helpers](/docs/references/react/use-user) tha
 
 The [`useAuth`](/docs/references/react/use-auth) hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
-```tsx copy filename="pages/example.tsx"
+```tsx filename="pages/example.tsx"
 import { useAuth } from "@clerk/clerk-react";
 
 export default function Example() {
@@ -237,7 +237,7 @@ export default function Example() {
 
 The [`useUser`](/docs/references/react/use-user) hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
-```tsx copy filename="pages/example.tsx"
+```tsx filename="pages/example.tsx"
 import { useUser } from "@clerk/clerk-react";
 
 export default function Example() {
