--- a/docs/quickstarts/redwood.mdx
+++ b/docs/quickstarts/redwood.mdx
@@ -16,7 +16,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 <Steps>
 ### Create a RedwoodJS application
 
-```sh filename="terminal" copy
+```sh filename="terminal"
 yarn create redwood-app my-redwood-project --typescript
 ```
 
@@ -26,7 +26,7 @@ Below is an example of an .env file. If you are signed into your Clerk Dashboard
 
 <InjectKeys>
 
-```sh copy filename=".env"
+```sh filename=".env"
 CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_SECRET_KEY={{secret}}
 ```
@@ -35,7 +35,7 @@ CLERK_SECRET_KEY={{secret}}
 
 #### Update redwood.toml
 
-```toml copy filename="redwood.toml"
+```toml filename="redwood.toml"
 [web]
   includeEnvironmentVariables = ['CLERK_PUBLISHABLE_KEY']
 ```
@@ -44,7 +44,7 @@ CLERK_SECRET_KEY={{secret}}
 
 The next step is to run a Redwood CLI command to install the required packages and generate some boilerplate code:
 
-```sh copy filename="my-redwood-project"
+```sh filename="my-redwood-project"
 yarn rw setup auth clerk --force
 ```
 
@@ -58,7 +58,7 @@ You can now access Clerk functions through the Redwood `useAuth()` hook, which i
 
 Below is an example of using the `useAuth` hook to verify if the user is authenticated. This will open a modal for your user to sign in to their account.
 
-```tsx filename="index.tsx" copy
+```tsx filename="index.tsx"
 import { useAuth } from '../../auth'
 
 const HomePage = () => {
@@ -81,7 +81,7 @@ export default HomePage
 
 ### Using Clerk components directly
 
-```tsx filename="index.tsx" copy
+```tsx filename="index.tsx"
 import { SignInButton, UserButton } from '@clerk/clerk-react'
 import { useAuth } from '../../auth'
 
