--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -9,7 +9,7 @@ The `authMiddleware()` helper integrates Clerk authentication into your Next.js 
 
 ## Usage
 
-```ts filename="middleware.ts" copy
+```ts filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
 
 export default authMiddleware();
@@ -25,7 +25,7 @@ With the recommended matcher, all routes are protected by Clerk's authentication
 
 Some developers will need to handle specific cases such as handling redirects differently or detecting if a user is inside an organization. These cases can be handled with `afterAuth()`.
 
-```ts filename="middleware.ts" copy
+```ts filename="middleware.ts"
 import { authMiddleware, redirectToSignIn } from '@clerk/nextjs';
 
 export default authMiddleware({
@@ -47,7 +47,7 @@ export default authMiddleware({
 
 If you need additional middleware handlers to execute before Clerk's authentication middleware, use `beforeAuth()`. An example where the middleware handler from `next-intl` is executed can be seen below.
 
-```ts filename="middleware.ts" copy
+```ts filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
 
 import createMiddleware from "next-intl/middleware";
@@ -77,7 +77,7 @@ export const config = {
 
 By default, Clerk's `authMiddleware()` treats all routes as private if the middleware runs. If you need to make specific routes public, use the `publicRoutes` option.
 
-```ts filename="middleware.ts" copy
+```ts filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
 export default authMiddleware({
   // "/" will be accessible to all users
