--- a/docs/references/nextjs/get-auth.mdx
+++ b/docs/references/nextjs/get-auth.mdx
@@ -14,7 +14,7 @@ The `getAuth()` helper retrieves the authentication state, allowing you to prote
 
 #### Basic usage
 
-```tsx filename="pages/api/example.ts" copy
+```tsx filename="pages/api/example.ts"
 import { getAuth } from "@clerk/nextjs/server";
 import type { NextApiRequest, NextApiResponse } from "next";
 
@@ -32,7 +32,7 @@ export default async function handler(
 
 It is important to protect your API routes to ensure that only authenticated users can access them. You can do this by checking if the `userId` is present in the `getAuth()` response.
 
-```tsx filename="pages/api/example.ts" copy
+```tsx filename="pages/api/example.ts"
 import { getAuth } from "@clerk/nextjs/server";
 import type { NextApiRequest, NextApiResponse } from "next";
 
@@ -53,7 +53,7 @@ export default async function handler(
 
 The `getToken()` function returns a promise that resolves to the current user's session token. You can also use this function to retrieve a custom JWT template.
 
-```tsx filename="pages/api/example.ts" copy
+```tsx filename="pages/api/example.ts"
 import { getAuth } from "@clerk/nextjs/server";
 import type { NextApiRequest, NextApiResponse } from "next";
 
@@ -72,7 +72,7 @@ export default async function handler(
 
 The `clerkClient` allows you to access the Clerk API. You can use this to retrieve or update data.
 
-```tsx filename="pages/api/example.ts" copy
+```tsx filename="pages/api/example.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { getAuth } from "@clerk/nextjs/server";
 import type { NextApiRequest, NextApiResponse } from "next";
