--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -10,7 +10,7 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 ## Usage
 
 <CodeBlockTabs options={["Next.js", "React"]}>
-  ```tsx copy filename="pages/index.tsx"
+  ```tsx filename="pages/index.tsx"
   import { useAuth } from '@clerk/nextjs';
 
   export default function ExternalDataPage() {
@@ -32,7 +32,7 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 
   ```
 
-  ```tsx copy filename="external-data-page.tsx"
+  ```tsx filename="external-data-page.tsx"
   import { useAuth } from '@clerk/clerk-react';
 
   export default function ExternalDataPage() {
