--- a/docs/references/react/use-clerk.mdx
+++ b/docs/references/react/use-clerk.mdx
@@ -18,7 +18,7 @@ The `useClerk` hook provides access to the the [`Clerk`](/docs/references/javasc
 ## Usage
 
 <CodeBlockTabs options={["Next.js", "React"]}>
-  ```tsx copy filename="pages/index.tsx"
+  ```tsx filename="pages/index.tsx"
   import { useClerk } from "@clerk/nextjs";
 
   export default function Home() {
@@ -29,7 +29,7 @@ The `useClerk` hook provides access to the the [`Clerk`](/docs/references/javasc
 
   ```
 
-  ```tsx copy filename="home.tsx"
+  ```tsx filename="home.tsx"
   import { useClerk } from "@clerk/clerk-react";
 
   export default function Home() {
