--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -14,7 +14,7 @@ The `useSessionList` hook returns an array of `Session` objects that have been r
 ## Usage
 
 <CodeBlockTabs options={['Next.js', 'React']}>
-```tsx copy filename="pages/index.tsx"
+```tsx filename="pages/index.tsx"
 import { useSessionList } from "@clerk/nextjs";
 
 export default function Home() {
@@ -34,7 +34,7 @@ export default function Home() {
 }
 ```
 
-```tsx copy filename="home.tsx"
+```tsx filename="home.tsx"
 import { useSessionList } from "@clerk/clerk-react";
 
 export default function Home() {
