--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -14,7 +14,7 @@ The `useSession` hook provides access to the current user's `Session` object, as
 ## Usage
 
 <CodeBlockTabs options={['Next.js', 'React']}>
-```tsx copy filename="pages/index.tsx"
+```tsx filename="pages/index.tsx"
 import { useSession } from "@clerk/nextjs";
 
 export default function Home() {
@@ -39,7 +39,7 @@ export default function Home() {
 }
 ```
 
-```tsx copy filename="home.tsx"
+```tsx filename="home.tsx"
 import { useSession } from "@clerk/clerk-react";
 
 export default function Home() {
