--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -17,7 +17,7 @@ The `useSignIn` hook provides access to the `SignIn` object, which allows you to
   <Tab>
     #### Check the current sign in status
 
-    ```tsx copy filename="pages/index.tsx"
+    ```tsx filename="pages/index.tsx"
     import { useSignIn } from "@clerk/nextjs";
 
     export default function SignInStep() {
@@ -34,7 +34,7 @@ The `useSignIn` hook provides access to the `SignIn` object, which allows you to
 
     #### Sign in a user with a custom flow
 
-    ```tsx copy filename="pages/signin.tsx"
+    ```tsx filename="pages/signin.tsx"
     import { useSignIn } from "@clerk/nextjs";
     import { useState } from "react";
 
@@ -96,7 +96,7 @@ The `useSignIn` hook provides access to the `SignIn` object, which allows you to
   <Tab>
     #### Check the current sign in status
 
-    ```tsx copy filename="pages/sign-in-step.tsx"
+    ```tsx filename="pages/sign-in-step.tsx"
     import { useSignIn } from "@clerk/clerk-react";
 
     export default function SignInStep() {
@@ -113,7 +113,7 @@ The `useSignIn` hook provides access to the `SignIn` object, which allows you to
 
     #### Sign in a user with a custom flow
 
-    ```tsx copy filename="pages/signin.tsx"
+    ```tsx filename="pages/signin.tsx"
     import { useSignIn } from "@clerk/clerk-react";
     import { useState } from "react";
 
