--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -16,7 +16,7 @@ The `useSignUp` hook gives you access to the `SignUp` object, which allows you t
   <Tab>
     #### Check the current sign up status
 
-    ```tsx copy filename="pages/sign-up.tsx"
+    ```tsx filename="pages/sign-up.tsx"
     import { useSignUp } from "@clerk/nextjs";
 
     export default function SignUpStep() {
@@ -33,7 +33,7 @@ The `useSignUp` hook gives you access to the `SignUp` object, which allows you t
 
     #### Sign up a user with a custom flow
 
-    ```tsx copy filename="pages/signup.tsx"
+    ```tsx filename="pages/signup.tsx"
     import { useSignUp } from "@clerk/nextjs";
     import { useState } from "react";
 
@@ -98,7 +98,7 @@ The `useSignUp` hook gives you access to the `SignUp` object, which allows you t
   <Tab>
     #### Check the current sign up status
 
-    ```tsx copy filename="sign-up-step.tsx"
+    ```tsx filename="sign-up-step.tsx"
     import { useSignUp } from "@clerk/clerk-react";
 
     export default function SignUpStep() {
@@ -115,7 +115,7 @@ The `useSignUp` hook gives you access to the `SignUp` object, which allows you t
 
     #### Sign up a user with a custom flow
 
-    ```tsx copy filename="signup.tsx"
+    ```tsx filename="signup.tsx"
     import { useSignUp } from "@clerk/clerk-react";
     import { useState } from "react";
 
