--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -16,7 +16,7 @@ The `useUser` hook is a convenient way to access the current user data where you
 ### Retrieve the current user data
 
 <CodeBlockTabs options={['Next.js', 'React']}>
-```tsx copy filename="pages/index.tsx"
+```tsx filename="pages/index.tsx"
 import { useUser } from "@clerk/nextjs";
 
 export default function Home() {
@@ -35,7 +35,7 @@ export default function Home() {
 
 ```
 
-```tsx copy filename="home.tsx"
+```tsx filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
 
 export default function Home() {
@@ -58,7 +58,7 @@ export default function Home() {
 ### Update the current user data
 
 <CodeBlockTabs options={['Next.js', 'React']}>
-```tsx copy filename="app/page.tsx"
+```tsx filename="app/page.tsx"
 import { useUser } from "@clerk/nextjs";
 
 export default function Home() {
@@ -80,7 +80,7 @@ export default function Home() {
 }
 ```
 
-```tsx copy filename="home.tsx"
+```tsx filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
 
 export default function Home() {
@@ -108,7 +108,7 @@ export default function Home() {
 If you need to retrieve the latest user data after updating the user elsewhere, use the `user.reload()` method.
 
 <CodeBlockTabs options={['Next.js', 'React']}>
-```tsx filename="app/page.tsx" copy
+```tsx filename="app/page.tsx"
 import { useUser } from "@clerk/nextjs";
 
 export default function Home() {
@@ -132,7 +132,7 @@ export default function Home() {
 }
 ```
 
-```tsx filename="home.tsx" copy
+```tsx filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
 
 export default function Home() {
