--- a/docs/users/deleting-users.mdx
+++ b/docs/users/deleting-users.mdx
@@ -10,11 +10,11 @@ Clerk currently supports deleting users through our [backend API](https://clerk.
 The [`deleteUser()`](/docs/references/backend/user/delete-user) method takes a single argument: the user ID of the user you want to delete. It can be accessed from the `users` sub-api of the `clerkClient` instance.
 
 <CodeBlockTabs options={["Curl", "Next.js App Router", "Next.js Pages Router", "Node"]}>
-```bash copy filename="curl.sh"
+```bash filename="curl.sh"
 curl -XDELETE -H 'Authorization: CLERK_SECRET_KEY' 'https://api.clerk.com/v1/users/{user_id}'
 ```
 
-```ts copy filename="app/private/route.ts"
+```ts filename="app/private/route.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { NextResponse } from 'next/server';
 
@@ -32,7 +32,7 @@ export async function DELETE(request: Request) {
 }
 ```
 
-```ts copy filename="pages/api/private.ts"
+```ts filename="pages/api/private.ts"
 import { clerkClient } from "@clerk/nextjs/server";
 import { NextApiRequest, NextApiResponse } from "next";
 
@@ -50,7 +50,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
 }
 ```
 
-```ts copy filename="private.ts"
+```ts filename="private.ts"
 import { clerk } from "@clerk/clerk-sdk-node";
 
 app.post('/deleteUser', (req, res) => {
