--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -23,14 +23,14 @@ Private metadata is only accessible by the backend, which makes this useful for 
 ### Setting private metadata
 
 <CodeBlockTabs options={['cURL', 'Pages Router', 'App Router', 'Node', 'Go','Ruby']}>
-```bash copy filename="curl.sh"
+```bash filename="curl.sh"
 curl -XPATCH -H 'Authorization: Bearer CLERK_SECRET_KEY' -H "Content-type: application/json" -d '{
   "private_metadata": {
     "stripeId": "12356"
   }
 }' 'https://api.clerk.com/v1/users/{user_id}/metadata'
 ```
-```ts copy filename="pages/api/private.ts"
+```ts filename="pages/api/private.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { NextApiRequest, NextApiResponse } from "next";
 
@@ -47,7 +47,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
   res.status(200).json({ success: true });
 }
 ```
-```ts copy filename="app/route/private.ts"
+```ts filename="app/route/private.ts"
 import { NextResponse } from 'next/server';
 import { clerkClient } from "@clerk/nextjs";
 
@@ -61,7 +61,7 @@ export async function POST() {
   return NextResponse.json({ success: true });
 }
 ```
-```ts copy filename="private.ts"
+```ts filename="private.ts"
 import { clerkClient } from "@clerk/clerk-sdk-node";
 
 app.post('/updateStripe', (req, res) => {
@@ -76,7 +76,7 @@ app.post('/updateStripe', (req, res) => {
 });
 
 ```
-```ts copy filename="private.go"
+```ts filename="private.go"
 var client clerk.Client
 
 func addStripeCustomerID(user *clerk.User, stripeCustomerID string) error {
@@ -92,7 +92,7 @@ func addStripeCustomerID(user *clerk.User, stripeCustomerID string) error {
 	}
 }
 ```
-```ts copy filename="private.rb"
+```ts filename="private.rb"
 // ruby json example with a private metadata and stripe id
 require 'clerk'
 require 'json'
@@ -112,11 +112,11 @@ clerk.users.updateMetadata("user_xyz", private_metadata: privateMetadata)
 You can retrieve the private metadata for a user by using the [`getUser`](/docs/references/backend/user/get-user) method. This method will return the `User` object which contains the private metadata.
 
 <CodeBlockTabs options={['cURL', 'Next.js App Router', 'Next.js Pages Router', 'Node', 'Go','Ruby']}>
-```bash copy filename="curl.sh"
+```bash filename="curl.sh"
 curl -XGET -H 'Authorization: CLERK_SECRET_KEY' -H "Content-type: application/json" 'https://api.clerk.com/v1/users/{user_id}'
 ```
 
-```ts copy filename="app/private/route.ts"
+```ts filename="app/private/route.ts"
 import { NextResponse } from 'next/server';
 import { clerkClient } from "@clerk/nextjs";
 
@@ -128,7 +128,7 @@ export async function GET(request: Request) {
 }
 ```
 
-```ts copy filename="pages/api/private.ts"
+```ts filename="pages/api/private.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { NextApiRequest, NextApiResponse } from "next";
 
@@ -141,7 +141,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
 }
 ```
 
-```ts copy filename="private.ts"
+```ts filename="private.ts"
 import { clerkClient } from "@clerk/clerk-sdk-node";
 
 app.post('/updateStripe', (req, res) => {
@@ -154,7 +154,7 @@ app.post('/updateStripe', (req, res) => {
 
 ```
 
-```ts copy filename="private.go"
+```ts filename="private.go"
 var client clerk.Client
 
 func GetUserMetadata(user *clerk.User, stripeCustomerID string) error {
@@ -166,7 +166,7 @@ func GetUserMetadata(user *clerk.User, stripeCustomerID string) error {
 }
 ```
 
-```ts copy filename="private.rb"
+```ts filename="private.rb"
 // ruby json example with a private metadata and stripe id
 require 'clerk'
 clerk = Clerk::SDK.new(api_key: "your_clerk_secret_key")
@@ -181,14 +181,14 @@ Public metadata is accessible by both the frontend and the backend. This is usef
 ### Setting public metadata
 
 <CodeBlockTabs options={['cURL', 'Pages Router', 'App Router', 'Node', 'Go','Ruby']}>
-```bash copy filename="curl.sh"
+```bash filename="curl.sh"
 curl -XPATCH -H 'Authorization: Bearer CLERK_SECRET_KEY' -H "Content-type: application/json" -d '{
   "public_metadata": {
     "role": "shopper"
   }
 }' 'https://api.clerk.com/v1/users/{user_id}/metadata'
 ```
-```ts copy filename="pages/api/public.ts"
+```ts filename="pages/api/public.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { NextApiRequest, NextApiResponse } from "next";
 
@@ -205,7 +205,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
   res.status(200).json({ success: true });
 }
 ```
-```ts copy filename="app/route/public.ts"
+```ts filename="app/route/public.ts"
 import { NextResponse } from 'next/server';
 import { clerkClient } from "@clerk/nextjs";
 
@@ -220,7 +220,7 @@ export async function POST() {
   return NextResponse.json({ success: true });
 }
 ```
-```ts copy filename="public.ts"
+```ts filename="public.ts"
 import { clerkClient } from "@clerk/clerk-sdk-node";
 
 app.post('/updateRole', (req, res) => {
@@ -236,7 +236,7 @@ app.post('/updateRole', (req, res) => {
 });
 
 ```
-```ts copy filename="public.go"
+```ts filename="public.go"
 var client clerk.Client
 
 func addStripeCustomerID(user *clerk.User, role string) error {
@@ -252,7 +252,7 @@ func addStripeCustomerID(user *clerk.User, role string) error {
 	}
 }
 ```
-```ts copy filename="public.rb"
+```ts filename="public.rb"
 // ruby json example with a private metadata and stripe id
 require 'clerk'
 require 'json'
@@ -288,14 +288,14 @@ The "unsafe" custom attributes can be set upon sign-up when creating or updating
 #### Using the Backend API
 
 <CodeBlockTabs options={['cURL', 'Pages Router', 'App Router', 'Node', 'Go','Ruby']}>
-```bash copy filename="curl.sh"
+```bash filename="curl.sh"
 curl -XPATCH -H 'Authorization: Bearer CLERK_SECRET_KEY' -H "Content-type: application/json" -d '{
   "unsafe_metadata": {
     "birthday": "11-30-1969"
   }
 }' 'https://api.clerk.com/v1/users/{user_id}/metadata'
 ```
-```ts copy filename="pages/api/private.ts"
+```ts filename="pages/api/private.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { NextApiRequest, NextApiResponse } from "next";
 
@@ -312,7 +312,7 @@ export default async function handler(req: NextApiRequest, res: NextApiResponse)
   res.status(200).json({ success: true });
 }
 ```
-```ts copy filename="app/route/private.ts"
+```ts filename="app/route/private.ts"
 import { NextResponse } from 'next/server';
 import { clerkClient } from "@clerk/nextjs";
 
@@ -326,7 +326,7 @@ export async function POST() {
   return NextResponse.json({ success: true });
 }
 ```
-```ts copy filename="private.ts"
+```ts filename="private.ts"
 import { clerkClient } from "@clerk/clerk-sdk-node";
 
 app.post('/updateStripe', (req, res) => {
@@ -341,7 +341,7 @@ app.post('/updateStripe', (req, res) => {
 });
 
 ```
-```ts copy filename="private.go"
+```ts filename="private.go"
 var client clerk.Client
 
 func addStripeCustomerID(user *clerk.User, stripeCustomerID string) error {
@@ -357,7 +357,7 @@ func addStripeCustomerID(user *clerk.User, stripeCustomerID string) error {
 	}
 }
 ```
-```ts copy filename="private.rb"
+```ts filename="private.rb"
 // ruby json example with a private metadata and stripe id
 require 'clerk'
 require 'json'
@@ -376,7 +376,7 @@ clerk.users.updateMetadata("user_xyz", unsafe_metadata: unsafeMetadata)
 
 <CodeBlockTabs options={['Pages Router', 'App Router', 'React', 'Remix','Gatsby', 'JavaScript']}>
 
-```tsx copy filename="pages/unsafe.tsx"
+```tsx filename="pages/unsafe.tsx"
 import {useUser} from "@clerk/nextjs";
 import {useState} from "react";
 
@@ -399,7 +399,7 @@ export default function UnSafePage() {
   )
 }
 ```
-```tsx copy filename="app/route/unsafe.tsx"
+```tsx filename="app/route/unsafe.tsx"
 "use client"
 import {useUser} from "@clerk/nextjs";
 import {useState} from "react";
@@ -423,7 +423,7 @@ export default function UnSafePage() {
   )
 }
 ```
-```tsx copy filename="unsafe.tsx"
+```tsx filename="unsafe.tsx"
 import {useUser} from "@clerk/clerk-react";
 import {useState} from "react";
 
@@ -446,7 +446,7 @@ export default function UnSafePage() {
   )
 }
 ```
-```tsx copy filename="unsafe.tsx"
+```tsx filename="unsafe.tsx"
 import {useUser} from "@clerk/remix";
 import {useState} from "react";
 
@@ -467,7 +467,7 @@ export default function UnSafePage() {
   )
 }
 ```
-```tsx copy filename="unsafe.tsx"
+```tsx filename="unsafe.tsx"
 // use Clerk React for gatsby
 import {useUser} from "@clerk/clerk-react";
 import {useState} from "react";
@@ -491,7 +491,7 @@ export default function UnSafePage() {
   )
 }
 ```
-```html copy filename="unsafe.html"
+```html filename="unsafe.html"
 <!DOCTYPE html>
 <html lang="en">
 
