--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -68,15 +68,15 @@ If you're using Next.js with Pages Router, you can create a webhook endpoint in 
 Svix provides a package for verifying the webhook signature, making it easy to verify the authenticity of the webhook events.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash copy filename="terminal" copy
+  ```bash filename="terminal"
   npm install svix
   ```
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 yarn add svix
 ```
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 pnpm add svix
 ```
 
@@ -86,7 +86,7 @@ Next you will want to retrieve the Webhook signing secret from the Clerk Dashboa
 
 ![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
 
-```ts copy filename="pages/api/webhook.ts"
+```ts filename="pages/api/webhook.ts"
 import type { IncomingHttpHeaders } from 'http';
 import type { NextApiRequest, NextApiResponse } from 'next';
 import type { WebhookRequiredHeaders } from 'svix';
@@ -135,15 +135,15 @@ If you're using Next.js with App Router, you can create a webhook endpoint in th
 Svix provides a package for verifying the webhook signature, making it easy to verify the authenticity of the webhook events.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install svix
   ```
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 yarn add svix
 ```
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 pnpm add svix
 ```
 
@@ -153,7 +153,7 @@ Next you will want to retrieve the Webhook signing secret from the Clerk Dashboa
 
 ![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
 
-```ts copy filename="app/api/webhook/route.ts"
+```ts filename="app/api/webhook/route.ts"
 import { Webhook } from 'svix'
 import { headers } from 'next/headers'
 import { WebhookEvent } from '@clerk/nextjs/server'
@@ -221,15 +221,15 @@ export async function POST(req: Request) {
 Svix provides a package for verifying the webhook signature, making it easy to verify the authenticity of the webhook events.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install svix
   ```
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 yarn add svix
 ```
 
-```bash filename="terminal" copy
+```bash filename="terminal"
 pnpm add svix
 ```
 
@@ -239,7 +239,7 @@ Next you will want to retrieve the Webhook signing secret from the Clerk Dashboa
 
 ![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
 
-```ts copy
+```ts
 router.post('/webhook', bodyParser.raw({type: 'application/json'}), async function(req, res) {
     try {
         const payload = req.body;
