--- a/docs/backend-requests/handling/manual-jwt.mdx
+++ b/docs/backend-requests/handling/manual-jwt.mdx
@@ -45,7 +45,7 @@ If the above process is successful, it means that the user is signed in to your 
 
 ## Example usage
 
-```tsx copy filename="pages/api/token-example.ts"
+```tsx filename="pages/api/token-example.ts"
 import type { NextApiRequest, NextApiResponse } from "next";
 import Cookies from "cookies";
 import jwt from "jsonwebtoken";
