--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -23,7 +23,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
     You can embed the `<SignIn />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="/app/sign-in/[[...sign-in]]/page.[jsx/tsx]"
+      ```jsx filename="/app/sign-in/[[...sign-in]]/page.[jsx/tsx]"
       import { SignIn } from "@clerk/nextjs";
 
       export default function Page() {
@@ -31,7 +31,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
       }
       ```
 
-      ```jsx copy filename="/pages/sign-in/[[...index]].tsx"
+      ```jsx filename="/pages/sign-in/[[...index]].tsx"
       import { SignIn } from "@clerk/nextjs";
 
       const SignInPage = () => (
@@ -43,7 +43,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/pages/sign-in/[[...index]].[jsx/tsx]"
+    ```jsx filename="/pages/sign-in/[[...index]].[jsx/tsx]"
     import { SignIn } from "@clerk/react";
 
     const SignInPage = () => (
@@ -54,7 +54,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```jsx copy filename="app/routes/sign-in/$.tsx"
+    ```jsx filename="app/routes/sign-in/$.tsx"
     import { SignIn } from "@clerk/remix";
 
     export default function SignInPage() {
@@ -69,7 +69,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/pages/sign-in.js"
+    ```jsx filename="/pages/sign-in.js"
     import { SignIn } from "gatsby-plugin-clerk";
 
     export default function SignInPage() {
@@ -84,7 +84,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```js copy filename="sign-in.js"
+    ```js filename="sign-in.js"
     window.Clerk.mountSignIn(
       document.getElementById("sign-in")
     );
