--- a/docs/components/control/authenticate-with-callback.mdx
+++ b/docs/components/control/authenticate-with-callback.mdx
@@ -17,7 +17,7 @@ The `<AuthenticateWithRedirectCallback />` is used to complete a custom OAuth fl
 <Tab>
 This example below uses built in Next.js pages, but you could use any routing library you want.
 
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import '@/styles/globals.css';
 import { ClerkProvider, SignedIn, SignedOut, useSignIn } from '@clerk/nextjs';
 import { AppProps } from 'next/app';
@@ -65,7 +65,7 @@ export default MyApp;
 
 Once you have implemented your sign in flow, you can implement the callback page.
 
-```tsx copy filename="/pages/sso-callback.tsx"
+```tsx filename="/pages/sso-callback.tsx"
 import { AuthenticateWithRedirectCallback } from '@clerk/nextjs';
 
 export default function SSOCallBack() {
@@ -78,7 +78,7 @@ export default function SSOCallBack() {
 
 This example below is using the `react-router-dom` library. You can use any routing library you want.
 
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import {
   ClerkProvider,
   AuthenticateWithRedirectCallback,
