--- a/docs/components/control/redirect-to-createorganization.mdx
+++ b/docs/components/control/redirect-to-createorganization.mdx
@@ -11,7 +11,7 @@ The `<RedirectToCreateOrganization />` component will navigate to the create org
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
 <Tab>
-```tsx copy filename="pages/_app.tsx"
+```tsx filename="pages/_app.tsx"
 import {
   ClerkProvider,
   SignedIn,
@@ -39,7 +39,7 @@ export default MyApp;
 </Tab>
 
 <Tab>
-```tsx copy filename="pages/privatepage.tsx"
+```tsx filename="pages/privatepage.tsx"
 import {
   ClerkProvider,
   SignedIn,
@@ -63,7 +63,7 @@ function PrivatePage() {
 </Tab>
 
 <Tab>
-```tsx filename="routes/index.tsx" copy
+```tsx filename="routes/index.tsx"
 import {
   SignedIn,
   SignedOut,
