--- a/docs/components/control/redirect-to-signin.mdx
+++ b/docs/components/control/redirect-to-signin.mdx
@@ -11,7 +11,7 @@ The `<RedirectToSignIn />` component will navigate to the sign in URL which has 
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
 <Tab>
-```tsx copy filename="pages/_app.tsx"
+```tsx filename="pages/_app.tsx"
 import {
   ClerkProvider,
   SignedIn,
@@ -37,7 +37,7 @@ export default MyApp;
 ```
 </Tab>
 <Tab>
-```tsx copy filename="pages/privatepage.tsx"
+```tsx filename="pages/privatepage.tsx"
 import {
   ClerkProvider,
   SignedIn,
@@ -62,7 +62,7 @@ function PrivatePage() {
 ```
 </Tab>
 <Tab>
-```tsx filename="routes/index.tsx" copy
+```tsx filename="routes/index.tsx"
 import {
   SignedIn,
   SignedOut,
