--- a/docs/components/control/signed-in.mdx
+++ b/docs/components/control/signed-in.mdx
@@ -14,7 +14,7 @@ The `<SignedIn />` component offers authentication checks as a cross-cutting con
 ## Usage
 <Tabs items={['Next.js', 'React', 'Remix']}>
 <Tab>
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import "@/styles/globals.css";
 import {
   ClerkProvider,
@@ -39,7 +39,7 @@ export default MyApp;
 ```
 </Tab>
 <Tab>
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import { SignedIn, ClerkProvider } from "@clerk/clerk-react";
 
 function Page() {
@@ -62,7 +62,7 @@ function Page() {
 ```
 </Tab>
 <Tab>
-```tsx filename="routes/index.tsx" copy
+```tsx filename="routes/index.tsx"
 import {
   SignedIn,
   UserButton,
@@ -87,7 +87,7 @@ export default function Index() {
 
 Below is an example of how to use `<SignedIn />` with React Router. The `<SignedIn />` component can be used as a child of a `<Route />` component to render content only to signed in users.
 
-```tsx copy filename="app.tsx"
+```tsx filename="app.tsx"
 import { Routes, Route } from 'react-router-dom';
 import {
   ClerkProvider,
