--- a/docs/components/customization/variables.mdx
+++ b/docs/components/customization/variables.mdx
@@ -13,7 +13,7 @@ The variables property is used to adjust the general styles of the component's b
 
 ## Usage
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import { ClerkProvider } from '@clerk/nextjs';
 
 <ClerkProvider appearance={{
