--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -19,7 +19,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
 <Tabs items={['Next.js', 'React', 'Remix']}>
   <Tab>
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="/app/create-organization/[[...create-organization]]/page.[jsx/tsx]"
+      ```jsx filename="/app/create-organization/[[...create-organization]]/page.[jsx/tsx]"
       import { CreateOrganization } from "@clerk/nextjs";
 
       export default function CreateOrganizationPage() {
@@ -27,7 +27,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
       }
       ```
       
-      ```jsx copy filename="/pages/create-organization/[[...index]].[jsx/tsx]"
+      ```jsx filename="/pages/create-organization/[[...index]].[jsx/tsx]"
       import { CreateOrganization } from "@clerk/nextjs";
 
       export default function CreateOrganizationPage() {
@@ -40,7 +40,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/create-organization.tsx"
+    ```jsx filename="/create-organization.tsx"
     import { CreateOrganization } from "@clerk/clerk-react";
 
     export default function CreateOrganizationPage() {
@@ -50,7 +50,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/route/create-organization/$.tsx"
+    ```jsx filename="/route/create-organization/$.tsx"
     import { CreateOrganization } from "@clerk/remix";
 
     export default function CreateOrganizationPage() {
