--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -21,7 +21,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
     You can embed the `<OrganizationProfile />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application.
   
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx copy filename="/app/organization-profile/[[...organization-profile]]/page.[jsx/tsx]"
+      ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.[jsx/tsx]"
       import { OrganizationProfile } from "@clerk/nextjs";
 
       export default function OrganizationProfilePage() {
@@ -31,7 +31,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
       }
       ```
 
-      ```jsx copy filename="/pages/organization-profile/[[...index]].[jsx/tsx]"
+      ```jsx filename="/pages/organization-profile/[[...index]].[jsx/tsx]"
       import { OrganizationProfile } from "@clerk/nextjs";
 
       export default function OrganizationProfilePage() {
@@ -44,7 +44,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
   </Tab>
 
   <Tab>
-    ```jsx copy filename="organization-profile.tsx"
+    ```jsx filename="organization-profile.tsx"
     import { OrganizationProfile } from "@clerk/clerk-react";
 
     export default function OrganizationProfilePage() {
@@ -54,7 +54,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
   </Tab>
 
   <Tab>
-    ```jsx copy filename="/pages/organization-profile/$.tsx"
+    ```jsx filename="/pages/organization-profile/$.tsx"
     import { OrganizationProfile } from "@clerk/remix";
 
     export default function OrganizationProfilePage() {
