--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -20,15 +20,15 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 Once you have a Expo application ready, you need to install Clerk's Expo SDK.
 
 <CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install @clerk/clerk-expo
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add @clerk/clerk-expo
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add @clerk/clerk-expo
   ```
 </CodeBlockTabs>
@@ -37,7 +37,7 @@ Once you have a Expo application ready, you need to install Clerk's Expo SDK.
 
 Below is an example of an `app.config.js` file. To get your keys, go to the API Keys page on the [Clerk dashboard](https://dashboard.clerk.com).
 
-```sh copy filename="app.config.js"
+```sh filename="app.config.js"
 module.exports = {
   name: 'MyApp',
   version: '1.0.0',
@@ -56,7 +56,7 @@ module.exports = {
 
 Update your app entry file to include the `<ClerkProvider />` wrapper. The `<ClerkProvider />` component wraps your Expo application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider />` wraps everything else to enable the context to be accessible anywhere within the app.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider } from "@clerk/clerk-expo";
@@ -86,7 +86,7 @@ const styles = StyleSheet.create({
 
 Clerk offers Control Components that allow you to protect your pages. In the example below, [`<SignedIn />`](/docs/components/control/signed-in) and [`<SignedOut />`](/docs/components/control/signed-out) control components are used.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
@@ -127,7 +127,7 @@ Using expo requires you to create custom flows. Our quickstart guide shows you h
 
 The examples below use email and password to sign a user up. You will notice that there is a conditonal flow in the sign up page for verifying a code called `pendingVerification`. This is an important step, as it verifies that the user owns their email.
 
-```tsx filename="components/SignUpScreen.tsx" copy
+```tsx filename="components/SignUpScreen.tsx"
 import * as React from "react";
 import { Text, TextInput, TouchableOpacity, View } from "react-native";
 import { useSignUp } from "@clerk/clerk-expo";
@@ -232,7 +232,7 @@ export default function SignUpScreen() {
 
 Make sure you update your `app` file to use the component that you have created. To keep it simple, this example adds the `<SignUpScreen />` to the `<SignedOut />` component.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
@@ -265,7 +265,7 @@ const styles = StyleSheet.create({
 
 ### Build your sign in
 
-```tsx filename="components/SignInScreen.tsx" copy
+```tsx filename="components/SignInScreen.tsx"
 import React from "react";
 import { Text, TextInput, TouchableOpacity, View } from "react-native";
 import { useSignIn } from "@clerk/clerk-expo";
@@ -327,7 +327,7 @@ export default function SignInScreen() {
 
 Make sure you update your `app` file to use the component that you have created. In the `<SignedOut />` component, replace the `<SignUpScreen />` with the `<SignInScreen />`.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
@@ -362,7 +362,7 @@ const styles = StyleSheet.create({
 
 If you want to add OAuth login flows to your Expo application, Clerk's OAuth hook allows you to handle both sign in and sign up in a single flow.
 
-```tsx filename="hooks/warmUpBrowser.tsx"" copy
+```tsx filename="hooks/warmUpBrowser.tsx"
 import React from "react";
 import * as WebBrowser from "expo-web-browser";
 
@@ -376,7 +376,7 @@ export const useWarmUpBrowser = () => {
 };
 ```
 
-```tsx filename="components/SignInWithOAuth.tsx" copy
+```tsx filename="components/SignInWithOAuth.tsx"
 import React from "react";
 import * as WebBrowser from "expo-web-browser";
 import { Button } from "react-native";
@@ -423,7 +423,7 @@ export default SignInWithOAuth;
 
 Make sure you update your `app` file to use the component that you have created. Replace the `<SignInScreen />` with the `<SignInWithOAuth />` to the `<SignedOut />` component.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
@@ -465,22 +465,22 @@ You can use it as your client JWT storage by setting the `tokenCache` prop in yo
 #### Install expo-secure-store
 
 <CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install expo-secure-store
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add expo-secure-store
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add install expo-secure-store
   ```
 </CodeBlockTabs>
 
 ***
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
@@ -537,7 +537,7 @@ const styles = StyleSheet.create({
 
 To sign a user out, you can use the `signOut` method from the `useAuth` hook. This will remove the JWT from the token cache and remove the session.
 
-```tsx filename="app.tsx" copy
+```tsx filename="app.tsx"
 import React from "react";
 import { SafeAreaView, Text, StyleSheet, View, Button } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut,useAuth } from "@clerk/clerk-expo";
@@ -616,7 +616,7 @@ Clerk provides a set of [hooks and helpers](/docs/references/react/use-user) tha
 
 The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
-```tsx copy filename="components/UseAuthExample.tsx"
+```tsx filename="components/UseAuthExample.tsx"
 import { useAuth } from "@clerk/clerk-expo";
 import { Text } from "react-native";
 
@@ -640,7 +640,7 @@ export default function UseAuthExample() {
 
 The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
-```tsx copy filename="components/UseUserExample.tsx"
+```tsx filename="components/UseUserExample.tsx"
 import { useUser } from "@clerk/clerk-expo";
 import { Text } from "react-native";
 
