--- a/docs/quickstarts/gatsby.mdx
+++ b/docs/quickstarts/gatsby.mdx
@@ -18,15 +18,15 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install gatsby-plugin-clerk
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add gatsby-plugin-clerk
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add gatsby-plugin-clerk
   ```
 </CodeBlockTabs>
@@ -37,7 +37,7 @@ Below is an example of your `.env.development` file. If you are signed into your
 
 <InjectKeys>
 
-```sh copy filename=".env.development"
+```sh filename=".env.development"
 GATSBY_CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_SECRET_KEY={{secret}}
 ```
@@ -48,7 +48,7 @@ CLERK_SECRET_KEY={{secret}}
 
 To use Clerk, you will need to update your `gatsby-config.ts` in order to resolve `gatsby-plugin-clerk` and load from `.env` files.
 
-```ts filename="gatsby-config.ts" copy
+```ts filename="gatsby-config.ts"
 import type { GatsbyConfig } from "gatsby"
 
 require("dotenv").config({
@@ -74,7 +74,7 @@ export default config
 
 Clerk offers [Control Components](/docs/components/overview) that allow you to protect your pages. These components are used to control the visibility of your pages based on the user's authentication state.
 
-```tsx filename="src/pages/index.tsx" copy
+```tsx filename="src/pages/index.tsx"
 import React from 'react'
 import {
   SignIn,
@@ -107,7 +107,7 @@ Clerk provides a set of [hooks and helpers](/docs/references/react/use-user) tha
 
 The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
-```tsx copy filename="src/pages/example.tsx"
+```tsx filename="src/pages/example.tsx"
 import { useAuth } from "gatsby-plugin-clerk";
 
 export default function Example() {
@@ -130,7 +130,7 @@ export default function Example() {
 
 The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
-```tsx copy filename="src/pages/example.tsx"
+```tsx filename="src/pages/example.tsx"
 import { useUser } from "gatsby-plugin-clerk";
 
 export default function Example() {
@@ -146,7 +146,7 @@ export default function Example() {
 
 ### SSR usage
 
-```tsx copy filename="src/pages/SSRPage.tsx"
+```tsx filename="src/pages/SSRPage.tsx"
 import * as React from 'react';
 import { GetServerData } from 'gatsby';
 import { withServerAuth } from 'gatsby-plugin-clerk/ssr';
