--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -14,15 +14,15 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as [helpers](/docs/references/nextjs/overview) for Next.js API routes, server-side rendering, and middleware.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install @clerk/nextjs
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add @clerk/nextjs
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add @clerk/nextjs
   ```
 </CodeBlockTabs>
@@ -33,7 +33,7 @@ Below is an example of an `.env.local` file. If you are signed into your Clerk D
 
 <InjectKeys>
 
-```sh copy filename=".env.local"
+```sh filename=".env.local"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_SECRET_KEY={{secret}}
 ```
@@ -53,7 +53,7 @@ Add the [`<ClerkProvider />`](/docs/components/clerk-provider) wrapper to your a
 </Callout>
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
-```tsx copy filename="app/layout.tsx"
+```tsx filename="app/layout.tsx"
 import { ClerkProvider } from '@clerk/nextjs'
 
 export const metadata = {
@@ -75,7 +75,7 @@ export default function RootLayout({
 }
 ```
 
-```tsx filename="_app.tsx" copy
+```tsx filename="_app.tsx"
 import { ClerkProvider } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 function MyApp({ Component, pageProps }: AppProps) {
@@ -97,7 +97,7 @@ export default MyApp;
 
 Now that Clerk is installed and mounted in your application, it’s time to decide which pages are public and which need to hide behind authentication. We do this by creating a `middleware.ts` file at the root folder (or inside `src/` if that is how you set up your app).
 
-```tsx filename="middleware.ts" copy
+```tsx filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
 
 // This example protects all routes including api/trpc routes
@@ -129,7 +129,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
 
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
-  ```tsx copy filename="app/sign-up/[[...sign-up]]/page.tsx"
+  ```tsx filename="app/sign-up/[[...sign-up]]/page.tsx"
   import { SignUp } from "@clerk/nextjs";
 
   export default function Page() {
@@ -137,7 +137,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
   }
   ```
 
-  ```tsx copy filename="/pages/sign-up/[[...index]].tsx"
+  ```tsx filename="/pages/sign-up/[[...index]].tsx"
   import { SignUp } from "@clerk/nextjs";
 
   export default function Page() {
@@ -150,7 +150,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
 
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
-  ```tsx copy filename="app/sign-in/[[...sign-in]]/page.tsx"
+  ```tsx filename="app/sign-in/[[...sign-in]]/page.tsx"
   import { SignIn } from "@clerk/nextjs";
 
   export default function Page() {
@@ -158,7 +158,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
   }
   ```
 
-  ```tsx copy filename="/pages/sign-in/[[...index]].tsx"
+  ```tsx filename="/pages/sign-in/[[...index]].tsx"
   import { SignIn } from "@clerk/nextjs";
 
   export default function Page() {
@@ -176,7 +176,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
 
 Next, add environment variables for the `signIn`, `signUp`, `afterSignUp`, and `afterSignIn` paths:
 
-```sh copy filename=".env.local"
+```sh filename=".env.local"
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
@@ -192,7 +192,7 @@ The [`<UserButton />`](/docs/components/user/user-button) allows users to manage
 You can add it anywhere you want, but next to the logo in your main application page is a good start.
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
-```tsx copy filename="app/page.tsx"
+```tsx filename="app/page.tsx"
 import { UserButton } from "@clerk/nextjs";
 
 export default function Home() {
@@ -204,7 +204,7 @@ export default function Home() {
 }
 ```
 
-```tsx copy filename="pages/example.tsx"
+```tsx filename="pages/example.tsx"
 import { UserButton } from "@clerk/nextjs";
 
 export default function Example() {
@@ -236,7 +236,7 @@ Clerk provides a set of [hooks and helpers](/docs/references/nextjs/overview#cli
 
 The [`useAuth`](/docs/references/react/use-auth) hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
-```tsx copy filename="example.tsx"
+```tsx filename="example.tsx"
 "use client";
 import { useAuth } from "@clerk/nextjs";
 
@@ -260,7 +260,7 @@ export default function Example() {
 
 The [`useUser`](/docs/references/react/use-user) hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
-```tsx copy filename="example.tsx"
+```tsx filename="example.tsx"
 "use client";
 import { useUser } from "@clerk/nextjs";
 
@@ -281,7 +281,7 @@ export default function Example() {
 
 You can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper and retrieve data from your own systems.
 
-```tsx copy filename="pages/api/auth.ts"
+```tsx filename="pages/api/auth.ts"
 import type { NextApiRequest, NextApiResponse } from "next";
 import { getAuth } from "@clerk/nextjs/server";
 
@@ -299,7 +299,7 @@ export default function handler(req: NextApiRequest, res: NextApiResponse) {
 In some cases, you may need the full [`User`](/docs/references/javascript/user/user) object. For example, if you want to access the user's email address or name. You can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full `User` object.
 
 
-```tsx copy filename="pages/api/auth.ts"
+```tsx filename="pages/api/auth.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { getAuth } from "@clerk/nextjs/server";
 import type { NextApiRequest, NextApiResponse } from "next";
@@ -332,7 +332,7 @@ export default async function handler(
 
     Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
-    ```tsx copy filename="page.tsx"
+    ```tsx filename="page.tsx"
     import { currentUser } from "@clerk/nextjs";
     import type { User } from "@clerk/nextjs/api";
 
@@ -348,7 +348,7 @@ export default async function handler(
 
     Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
 
-    ```tsx copy filename="app/page.tsx"
+    ```tsx filename="app/page.tsx"
     import { auth } from "@clerk/nextjs";
 
     export default function Page() {
@@ -365,7 +365,7 @@ export default async function handler(
       Please note the addition of buildClerkProps in the return statement, which informs our React helpers of the authentication state during server-side rendering (like `useAuth()`, `<SignedIn>`, and `<SignedOut>`).
     </Callout>
 
-    ```tsx copy filename="pages/example.tsx"
+    ```tsx filename="pages/example.tsx"
     import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
     import { GetServerSideProps } from "next";
 
@@ -383,7 +383,7 @@ export default async function handler(
 
     You can also access the full user object before passing it to the page using the `clerkClient` helper.
 
-    ```tsx copy filename="pages/example.tsx"
+    ```tsx filename="pages/example.tsx"
     import { clerkClient } from "@clerk/nextjs";
     import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
     import { GetServerSideProps } from "next";
