--- a/docs/references/nextjs/build-clerk-props.mdx
+++ b/docs/references/nextjs/build-clerk-props.mdx
@@ -14,7 +14,7 @@ Clerk uses `buildClerkProps` to inform the client side helpers of the authentica
 
 #### Basic usage
 
-```tsx filename="pages/myServerSidePage" copy
+```tsx filename="pages/myServerSidePage"
 import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
 import { GetServerSideProps } from "next";
 
@@ -34,7 +34,7 @@ export const getServerSideProps: GetServerSideProps = async (ctx) => {
 
 It is important to protect your API routes to ensure that only authenticated users can access them. You can do this by checking if the `userId` is present in the `getAuth()` response.
 
-```tsx filename="pages/api/example.ts" copy
+```tsx filename="pages/api/example.ts"
 import { clerkClient, getAuth, buildClerkProps } from "@clerk/nextjs/server";
 import { GetServerSideProps } from "next";
 
@@ -51,7 +51,7 @@ export const getServerSideProps: GetServerSideProps = async (ctx) => {
 
 The `clerkClient` allows you to access the Clerk API. You can use this to retrieve or update data.
 
-```tsx filename="pages/api/example.ts" copy
+```tsx filename="pages/api/example.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
 import { GetServerSideProps } from "next";
