--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -20,15 +20,15 @@ Learn how to integrate Clerk into your Next.js application using [tRPC](https://
 Clerk's Next.js SDK gives you access to prebuilt components and hooks, as well as our [helpers](/docs/references/nextjs/overview) for Next.js API routes, server-side rendering, and middleware.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   npm install @clerk/nextjs
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   yarn add @clerk/nextjs
   ```
 
-  ```bash filename="terminal" copy
+  ```bash filename="terminal"
   pnpm add @clerk/nextjs
   ```
 </CodeBlockTabs>
@@ -39,7 +39,7 @@ Below is an example of an `.env.local` file. If you are signed into your Clerk D
 
 <InjectKeys>
 
-```sh copy filename=".env.local"
+```sh filename=".env.local"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_SECRET_KEY={{secret}}
 ```
@@ -50,7 +50,7 @@ CLERK_SECRET_KEY={{secret}}
 
 [Middleware](/docs/references/nextjs/auth-middleware) needs to be placed at the root of your project. This allows you to use Clerk server-side APIs.
 
-```ts filename="middleware.ts" copy
+```ts filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
 
 export default authMiddleware();
