--- a/docs/references/nextjs/with-clerk-middleware.mdx
+++ b/docs/references/nextjs/with-clerk-middleware.mdx
@@ -20,7 +20,7 @@ The `withClerkMiddleware` wrapper allows Clerk to access session data on the ser
 
 This is the minimal amount of code needed to use Clerk Server Side helpers.
 
-```tsx filename="middleware.ts" copy
+```tsx filename="middleware.ts"
 import { withClerkMiddleware } from "@clerk/nextjs/server";
 import { NextResponse } from "next/server";
 import type { NextRequest } from "next/server";
@@ -47,7 +47,7 @@ export const config = {
 
 #### Usage with page protection
 
-```tsx filename="middleware.ts" copy
+```tsx filename="middleware.ts"
 import { withClerkMiddleware } from "@clerk/nextjs/server";
 import { getAuth } from "@clerk/nextjs/server";
 import { NextResponse } from "next/server";
