--- a/docs/users/web3.mdx
+++ b/docs/users/web3.mdx
@@ -23,7 +23,7 @@ After signing in with Metamask, you'll be presented with the Next.js default sta
 
 In this example, the [`User`](/docs/references/javascript/user/user) object for the current user can be accessed through the [`useUser()`](/docs/references/react/use-user) hook. The user's primary Web3 address can then be retrieved from the `User` object.
 
-```jsx filename="pages/index.js" copy
+```jsx filename="pages/index.js"
 import { SignIn, SignOutButton, UserButton, useUser } from "@clerk/nextjs";
 
 export default function Home() {
@@ -65,7 +65,7 @@ export default function Home() {
 
 A new Next.js app using Pages Router comes with a sample API route in `/pages/api/hello.js`. Let's modify it to retrieve the user's Web3 address:
 
-```jsx filename="pages/api/hello.ts" copy
+```jsx filename="pages/api/hello.ts"
 import type { NextApiRequest, NextApiResponse } from "next";
 import { getAuth } from "@clerk/nextjs/server";
 import { clerkClient } from "@clerk/nextjs";
